--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       # 制作docker镜像并推送到dockerhub
       - name: build and push docker image
         run: |
-          docker login -u ${{ secrets.ALIYUNCS_PASSWORD }} -p ${{ secrets.ALIYUNCS_PASSWORD }}
+          docker login --username ${{ secrets.ALIYUNCS_PASSWORD }} --password ${{ secrets.ALIYUNCS_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
           docker-compose build
           docker-compose push
           docker logout
