--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: registry.cn-hangzhou.aliyuncs.com/mzwine_sh/todolist_mysql:latest
     container_name: todolist_mysql_server
     restart: always
-    # MYSQL_ROOT_PASSWORD: "123456"
+    MYSQL_ROOT_PASSWORD: "Abc123123#"
 
   node: # nodejs服务
     depends_on:
